<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Registrar">

    <TextView
        android:id="@+id/tvIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sh_bg_header_police_blue"
        android:paddingHorizontal="16dp"
        android:paddingVertical="36dp"
        android:text="¡Vamos a registrarte!"
        android:textColor="@color/flesh"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="48dp"
        android:paddingVertical="8dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/sh_bg_btn_bright_gray"
        android:text="@string/iniciar_sesion"
        android:textAllCaps="false"
        android:textColor="@color/police_blue"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:layout_marginStart="186dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="56dp"
        android:paddingVertical="8dp"
        android:background="@drawable/sh_bg_btn_carmine_pink"
        android:text="@string/registrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:translationZ="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="24dp"
        app:hintEnabled="false"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/tvRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sh_bg_btn_bright_gray"
            android:paddingHorizontal="16dp"
            android:hint="Nombre Completo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp"
        app:hintEnabled="false"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/tilNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sh_bg_btn_bright_gray"
            android:paddingHorizontal="16dp"
            android:hint="@string/correo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/tilCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sh_bg_btn_bright_gray"
            android:paddingHorizontal="16dp"
            android:hint="@string/passwordd" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordd2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/tilPasswordd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sh_bg_btn_bright_gray"
            android:paddingHorizontal="16dp"
            android:hint="@string/confirm_passwordd" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="64dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/sh_bg_btn_gunmetal"
        android:text="@string/registrarse"
        android:fontFamily="@font/poppins_regular"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPasswordd2" />

    <View
        android:id="@+id/v01"
        android:layout_width="96dp"
        android:layout_height="1dp"
        android:background="@color/carmine_pink"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnIniciar"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:layout_width="96dp"
        android:layout_height="1dp"
        android:background="@color/carmine_pink"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnIniciar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="O registrate con"
        android:textStyle="bold"
        android:textColor="@color/police_blue"
        app:layout_constraintTop_toBottomOf="@id/btnIniciar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivFacebook"
        android:layout_width="108dp"
        android:layout_height="84dp"
        android:background="@drawable/sh_bg_btn_flesh"
        android:padding="16dp"
        android:layout_margin="24dp"
        android:src="@drawable/ic_facebook"
        android:contentDescription="@string/content_description"

        app:layout_constraintTop_toBottomOf="@id/v01"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/ivGoogle"
        android:layout_width="108dp"
        android:layout_height="84dp"
        android:background="@drawable/sh_bg_btn_flesh"
        android:padding="16dp"
        android:layout_margin="24dp"
        android:src="@drawable/ic_google_plus"
        android:contentDescription="@string/content_description"

        app:layout_constraintTop_toBottomOf="@id/v01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivApple"
        android:layout_width="108dp"
        android:layout_height="84dp"
        android:background="@drawable/sh_bg_btn_flesh"
        android:padding="16dp"
        android:layout_margin="24dp"
        android:src="@drawable/ic_apple"
        android:contentDescription="@string/content_description"

        app:layout_constraintTop_toBottomOf="@id/v01"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="¿Ya tienes una cuenta?"
            android:textStyle="bold"
            android:textColor="@color/police_blue"
            />

        <TextView
            android:id="@+id/tvRegistrar02"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:text="Inicia Sesión"
            android:textStyle="bold"
            android:textColor="@color/carmine_pink"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>